<resources>
    <string name="app_name">MarvelApp</string>
    <string name="hello">Hello !</string>
    <string name="intro">Get to know about your favorite Marvel characters, super heroes, and villains, also another information such as series, events and comics here</string>
    <string name="characters">Characters</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>
    <string name="series">Series</string>
    <string name="vid">Videos</string>
    <string name="info">Information</string>
    <string name="characters_intro">The women, men, organizations, alien species, deities, animals, non-corporeal entities, trans-dimensional manifestations, abstract personifications, and green amorphous blobs which occupy the Marvel Universe (and various alternate universes, timelines and altered realities therein).</string>
    <string name="comics_intro">Individual print and digital comic issues, collections and graphic novels.</string>
    <string name="events_intro">Big, universe-altering storylines.</string>
    <string name="series_intro">Sequentially numbered (well, mostly sequentially numbered) groups comics with the same title.</string>
    <string name="attribution">Attribution</string>
</resources>