<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.details.Series.Series1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/vivid_red">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/btnBackSerDetail"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:src="@drawable/marvel_logo" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivSerDet1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/categories4"/>

    <TextView
        android:id="@+id/tvSerName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/series"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvSerDesc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/series_intro"
        android:fontFamily="@font/montserrat_medium"/>

    <TextView
        android:id="@+id/tvAttribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/attribution"
        android:fontFamily="@font/montserrat_medium"/>

</LinearLayout>